force-app/main/default/objects/User/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>