force-app/main/default/objects/User/fields/Country_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Service__c</fullName>
    <description>JIRA:AGMPB-297</description>
    <label>Country Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>