force-app/main/default/objects/User/fields/First_Login__c.field-meta.xml
<CustomField>
    <fullName>First_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check if the user logged In successfully for the first time.</description>
    <label>First Login</label>
    <type>Checkbox</type>
</CustomField>