force-app/main/default/objects/User/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <description>JIRA:AGMPB-249</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>