force-app/main/default/objects/User/fields/Share_Email_with_Employer__c.field-meta.xml
<CustomField>
    <fullName>Share_Email_with_Employer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JIRA:AGMPB-592</description>
    <label>Share email address update with employer</label>
    <type>Checkbox</type>
</CustomField>