force-app/main/default/objects/User/fields/Spouse_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Last_Name__c</fullName>
    <description>AGMPB-689</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Spouse Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>