force-app/main/default/objects/User/fields/Spouse_Phone__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Phone__c</fullName>
    <description>AGMPB-689</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the full phone number in local format, starting with the country code (e.g., +49 151 12345678).</inlineHelpText>
    <label>Spouse Phone</label>
    <type>Phone</type>
</CustomField>