force-app/main/default/objects/User/validationRules/User_VR01_LinkedInURLRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>User_VR01_LinkedInURLRequired</fullName>
    <active>false</active>
    <description>JIRA:AGMPB-466</description>
    <errorConditionFormula>$Profile.Name = &apos;Client Portal&apos; &amp;&amp;
NOT(
    ISBLANK(LinkedIn_URL__c)
) &amp;&amp;
NOT(
    BEGINS(LinkedIn_URL__c, &quot;https://www.linkedin.com/&quot;) || 
    BEGINS(LinkedIn_URL__c, &quot;http://www.linkedin.com/&quot;)
)</errorConditionFormula>
    <errorDisplayField>LinkedIn_URL__c</errorDisplayField>
    <errorMessage>User_VR01: The Linkedin URL must begin with &apos;https://www.linkedin.com/&apos;.</errorMessage>
</ValidationRule>