force-app/main/default/objects/User/validationRules/User_VR02_RequireTimeZoneandLinkedInURL.validationRule-meta.xml
<ValidationRule>
    <fullName>User_VR02_RequireTimeZoneandLinkedInURL</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Profile.Name = &quot;Internal Andersen User&quot;,
    OR(
        ISBLANK(LinkedIn_URL__c),
        ISPICKVAL(TimeZoneSidKey, &quot;&quot;)
    )
)</errorConditionFormula>
    <errorMessage>User_VR02: LinkedIn URL and Time Zone are required fields Please fill these fields</errorMessage>
</ValidationRule>